--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">AndroidTest</string>
+    <string name="name">Name:</string>
+    <string name="down">DOWN</string>
+    <string name="up">UP</string>
+    <string name="_0">0</string>
+    <string name="name1">Name</string>
 </resources>
