--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,13 @@
 <resources>
-    <string name="app_name">AndroidTest</string>
+    <string name="app_name">Fit Runner</string>
     <string name="name">Name:</string>
     <string name="down">DOWN</string>
     <string name="up">UP</string>
     <string name="_0">0</string>
     <string name="name1">Name</string>
+    <string name="textview">TextView</string>
+    <string name="send">Send</string>
+    <string name="resetiraj">Resetiraj</string>
+    <string name="hrvatski">Hrvatski</string>
+    <string name="engleski">Engleski</string>
 </resources>
