--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="resetiraj">Resetiraj</string>
     <string name="hrvatski">Hrvatski</string>
     <string name="engleski">Engleski</string>
+    <string name="reset_counter">reset counter</string>
 </resources>
